# Advanced-object-programming-c-

Lab10/: Buffer.h  BufferArr.h  BufferFile.h  CMakeLists.txt  Node.h  Shop.h  Warehouse.h  main.cpp
Lab12/: CMakeLists.txt  Car.h  main.cpp
Lab2/cw1/: CMakeLists.txt  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.cpp  Figure.h  Square.cpp  Square.h  TeamLeader.cpp  TeamLeader.h  main.cpp
Lab3/: Adding.cpp  Adding.h  Array.cpp  Array.h  CMakeLists.txt  Student.cpp  Student.h  main.cpp
Lab5/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
Lab6/: CMakeLists.txt  main.cpp
Lab7/: CMakeLists.txt  Car.cpp  CarCatalog.cpp  CarCatalog.h  Countries.cpp  Countries.h  main.cpp
Lab7.1/: CMakeLists.txt
Lab9/: CMakeLists.txt  main.cpp
Nowy folder/: CMakeLists.txt  main.cpp  text.txt  text2.txt
lab1_1/: CMakeLists.txt  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
lab4/: CMakeLists.txt  Citizen.cpp  Citizen.h  City.cpp  City.h  Compare.cpp  Compare.h  Even.cpp  Even.h  Student.cpp  Student.h  main.cpp
untitled/: CMakeLists.txt  Car.h  CarCatalog.h  Country.cpp  Country.h  main.cpp
